[gd_scene load_steps=14 format=3 uid="uid://dq5c4dx42frn7"]

[ext_resource type="Script" path="res://scripts/building/harbour.gd" id="1_3l5pk"]
[ext_resource type="PackedScene" uid="uid://7pleonqc0g8s" path="res://assets/buildings/building_selection_box.tscn" id="1_jnw5u"]
[ext_resource type="ArrayMesh" uid="uid://dk2bwt508git6" path="res://models/buildings/harbour/level1/main.obj" id="1_rhw1d"]
[ext_resource type="Texture2D" uid="uid://byvx5ejj4wy3j" path="res://Textures/buildings/icon.png" id="2_kj1ae"]
[ext_resource type="PackedScene" uid="uid://f4rnkors1ame" path="res://assets/screens/menus/panel_test.tscn" id="5_8hwdq"]
[ext_resource type="PackedScene" uid="uid://3jkve0f4hvp" path="res://assets/screens/menus/error_box.tscn" id="5_ttg8u"]
[ext_resource type="PackedScene" uid="uid://y4jaogs3dvof" path="res://assets/screens/menus/panel_top.tscn" id="6_5xrls"]
[ext_resource type="PackedScene" uid="uid://cgh30i5m82ac0" path="res://assets/screens/menus/crew_button.tscn" id="6_ygu2a"]
[ext_resource type="PackedScene" uid="uid://d4jwilcur04f0" path="res://assets/screens/menus/boat_purchase/value_bar.tscn" id="7_8nwqa"]

[sub_resource type="BoxShape3D" id="BoxShape3D_q1rev"]
size = Vector3(13.455, 1.96665, 14.538)

[sub_resource type="Animation" id="Animation_r2x8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ui/left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-550, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ui/right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2867, 0)]
}

[sub_resource type="Animation" id="Animation_sv6lu"]
resource_name = "open_ui"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ui/left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-550, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ui/right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2889, 0), Vector2(2301, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4auct"]
_data = {
"RESET": SubResource("Animation_r2x8f"),
"open_ui": SubResource("Animation_sv6lu")
}

[node name="harbour" type="StaticBody3D"]
script = ExtResource("1_3l5pk")
metadata/building_type = "harbour"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00707743, 0)
mesh = ExtResource("1_rhw1d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.43875, -0.992374, 6.14987)
shape = SubResource("BoxShape3D_q1rev")

[node name="building_selection_box" parent="." instance=ExtResource("1_jnw5u")]
transform = Transform3D(13.8416, 0, 0, 0, 2.15156, 0, 0, 0, 14.6632, 6.54317, -0.97218, 6.17014)
metadata/building_type = ""

[node name="icon" type="Sprite3D" parent="."]
transform = Transform3D(0.544169, 0, 0, 0, 0.544169, 0, 0, 0, 0.544169, 7.0858, 2.16665, 6.99515)
visible = false
billboard = 1
texture = ExtResource("2_kj1ae")

[node name="access_camera" type="Camera3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 9.1, 7.005, 4.5)

[node name="boats" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.51318, -1.17478, 2.26977)

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="left" type="Marker2D" parent="ui"]
position = Vector2(-550, 0)

[node name="panelTest" parent="ui/left" instance=ExtResource("5_8hwdq")]
offset_left = -130.0
offset_right = -130.0

[node name="scroll" type="VScrollBar" parent="ui/left"]
offset_left = 407.0
offset_top = 415.0
offset_right = 430.0
offset_bottom = 1271.0

[node name="boat_list" type="Marker2D" parent="ui/left"]
position = Vector2(18, 531)

[node name="ColorRect2" type="ColorRect" parent="ui/left"]
offset_left = -161.0
offset_top = 301.0
offset_right = 459.0
offset_bottom = 364.0
color = Color(0.92549, 0.262745, 0.372549, 1)

[node name="ColorRect6" type="ColorRect" parent="ui/left"]
offset_left = -161.0
offset_top = 364.0
offset_right = 459.0
offset_bottom = 403.0
color = Color(0, 0, 0, 0.580392)

[node name="ColorRect3" type="ColorRect" parent="ui/left"]
offset_left = -170.0
offset_top = 166.0
offset_right = 459.0
offset_bottom = 283.0
color = Color(0.152941, 0.192157, 0.403922, 1)

[node name="ColorRect4" type="ColorRect" parent="ui/left"]
offset_left = -170.0
offset_top = 291.0
offset_right = 459.0
offset_bottom = 304.0
color = Color(0.988235, 0.988235, 0.929412, 1)

[node name="ColorRect5" type="ColorRect" parent="ui/left"]
offset_left = -169.0
offset_top = 277.0
offset_right = 459.0
offset_bottom = 293.0
color = Color(0.92549, 0.262745, 0.372549, 1)

[node name="Label" type="Label" parent="ui/left"]
offset_left = 27.0
offset_top = 319.0
offset_right = 75.0
offset_bottom = 345.0
text = "boats:"

[node name="harbour_stats" type="Button" parent="ui/left"]
offset_left = -132.0
offset_top = 204.0
offset_right = 457.0
offset_bottom = 275.0
focus_mode = 0
text = "harbour stats"
flat = true

[node name="panel_top" parent="ui/left" instance=ExtResource("6_5xrls")]
offset_left = -130.0
offset_top = 2.0
offset_right = 518.0
offset_bottom = 184.0

[node name="right" type="Marker2D" parent="ui"]
position = Vector2(2867, 0)

[node name="panelTest" parent="ui/right" instance=ExtResource("5_8hwdq")]
offset_left = 122.0
offset_right = 122.0
scale = Vector2(-1, 1)

[node name="ColorRect2" type="ColorRect" parent="ui/right"]
visible = false
offset_left = -449.0
offset_top = -3.0
offset_right = -1.0
offset_bottom = 1295.0
color = Color(0, 0, 0, 1)

[node name="speed" type="Label" parent="ui/right"]
offset_left = -423.0
offset_top = 439.0
offset_right = -32.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 25
text = "speed"
autowrap_mode = 2

[node name="value_bar" parent="ui/right/speed" instance=ExtResource("7_8nwqa")]
layout_mode = 0
offset_left = 135.0
offset_top = 11.0
offset_right = 295.0
offset_bottom = 21.0

[node name="durability" type="Label" parent="ui/right"]
offset_left = -423.0
offset_top = 517.0
offset_right = -32.0
offset_bottom = 573.0
theme_override_font_sizes/font_size = 25
text = "durability"
autowrap_mode = 2

[node name="value_bar" parent="ui/right/durability" instance=ExtResource("7_8nwqa")]
layout_mode = 0
offset_left = 135.0
offset_top = 11.0
offset_right = 295.0
offset_bottom = 21.0

[node name="condition" type="Label" parent="ui/right"]
offset_left = -423.0
offset_top = 287.0
offset_right = -32.0
offset_bottom = 343.0
theme_override_font_sizes/font_size = 25
text = "condition"
autowrap_mode = 2

[node name="size" type="Label" parent="ui/right"]
offset_left = -423.0
offset_top = 352.0
offset_right = -32.0
offset_bottom = 408.0
theme_override_font_sizes/font_size = 25
text = "size"
autowrap_mode = 2

[node name="small" type="Label" parent="ui/right"]
offset_left = -423.0
offset_top = 608.0
offset_right = -32.0
offset_bottom = 664.0
theme_override_font_sizes/font_size = 25
text = "small fish"
autowrap_mode = 2

[node name="value_bar" parent="ui/right/small" instance=ExtResource("7_8nwqa")]
layout_mode = 0
offset_left = 135.0
offset_top = 11.0
offset_right = 295.0
offset_bottom = 24.0

[node name="medium" type="Label" parent="ui/right"]
offset_left = -453.0
offset_top = 672.0
offset_right = -62.0
offset_bottom = 728.0
theme_override_font_sizes/font_size = 25
text = "medium fish"
autowrap_mode = 2

[node name="value_bar" parent="ui/right/medium" instance=ExtResource("7_8nwqa")]
layout_mode = 0
offset_left = 165.0
offset_top = 8.0
offset_right = 325.0
offset_bottom = 22.0
scale = Vector2(1.75, 1.95)

[node name="large" type="Label" parent="ui/right"]
offset_left = -423.0
offset_top = 743.0
offset_right = -32.0
offset_bottom = 799.0
theme_override_font_sizes/font_size = 25
text = "large fish"
autowrap_mode = 2

[node name="value_bar" parent="ui/right/large" instance=ExtResource("7_8nwqa")]
layout_mode = 0
offset_left = 133.0
offset_top = 11.0
offset_right = 293.0
offset_bottom = 24.0

[node name="upgrade" type="Button" parent="ui/right"]
offset_left = -393.0
offset_top = 1013.0
offset_right = -42.0
offset_bottom = 1094.0
focus_mode = 0
text = "upgrade"

[node name="rename" type="Button" parent="ui/right"]
offset_left = -393.0
offset_top = 1136.0
offset_right = -42.0
offset_bottom = 1217.0
focus_mode = 0
text = "rename"

[node name="title2" type="Label" parent="ui/right"]
offset_left = -390.0
offset_top = 17.0
offset_right = -57.0
offset_bottom = 77.0
text = "Harbour Stats:"

[node name="level" type="Label" parent="ui/right"]
offset_left = -390.0
offset_top = 139.0
offset_right = -57.0
offset_bottom = 199.0

[node name="space" type="Label" parent="ui/right"]
offset_left = -390.0
offset_top = 204.0
offset_right = -57.0
offset_bottom = 264.0

[node name="panel_top" parent="ui/right" instance=ExtResource("6_5xrls")]
offset_left = 121.0
offset_right = 771.0
scale = Vector2(-1, 1)

[node name="title" type="Label" parent="ui/right"]
offset_left = -423.0
offset_top = 18.0
offset_right = -32.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
autowrap_mode = 2

[node name="type" type="Label" parent="ui/right"]
offset_left = -423.0
offset_top = 102.0
offset_right = -32.0
offset_bottom = 158.0
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
autowrap_mode = 2

[node name="rename_text_edit" type="TextEdit" parent="ui"]
visible = false
layout_mode = 0
offset_left = 916.0
offset_top = 609.0
offset_right = 1291.0
offset_bottom = 709.0
placeholder_text = "add new name here must be over 3 characters and under 30"
wrap_mode = 1

[node name="cancel" type="Button" parent="ui/rename_text_edit"]
layout_mode = 0
offset_left = 347.0
offset_right = 374.0
offset_bottom = 31.0
focus_mode = 0
text = "X"

[node name="confirm" type="Button" parent="ui/rename_text_edit"]
layout_mode = 0
offset_left = -5.0
offset_top = 69.0
offset_right = 379.0
offset_bottom = 103.0
focus_mode = 0
text = "confirm"

[node name="error_box" parent="ui" instance=ExtResource("5_ttg8u")]
visible = false

[node name="crew_button" parent="ui" instance=ExtResource("6_ygu2a")]
layout_mode = 0
offset_left = 1090.0
offset_top = 278.0
offset_right = 1218.0
offset_bottom = 406.0

[node name="warning" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4auct")
}

[connection signal="pressed" from="ui/left/harbour_stats" to="." method="_on_harbour_stats_pressed"]
[connection signal="pressed" from="ui/right/upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="ui/right/rename" to="." method="_on_rename_pressed"]
[connection signal="pressed" from="ui/rename_text_edit/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="ui/rename_text_edit/confirm" to="." method="_on_confirm_pressed"]
[connection signal="timeout" from="warning" to="." method="_on_warning_timeout"]
